@@ -3,7 +3,7 @@
     __UNREAD_COUNT__/__ITEM_COUNT__
   </td>
   <td class='feed-title-__READ__-__EVEN__'>
-    <a class='feed-url-__READ__-__EVEN__' target='item'
+    <a class='feed-url-__READ__-__EVEN__' target='itemFrame'
        onClick='selectFeed(__INDEX__)'
        href='/raggle/item/?category=__CATEGORY__&amp;feed_id=__INDEX__'>__TITLE__</a>
   </td>
