@@ -1,6 +1,6 @@
 <tr class='item-tr-__READ__-__EVEN__'>
   <td class='item-title-__READ__-__EVEN__'>
-    <a class='item-url-__READ__-__EVEN__' target='desc'
+    <a class='item-url-__READ__-__EVEN__' target='descFrame'
        onClick='selectFeedItem(__FEED_ID__, __INDEX__)'
        href='/raggle/desc/?category=__CATEGORY__&amp;feed_id=__FEED_ID__&amp;item_id=__INDEX__'>__TITLE__</a>
   </td>
