@@ -11,10 +11,10 @@
   <frameset rows='30,*' border='1'>
     <frame name='titlebar' src='/titlebar.html' scrolling='no' />
     <frameset cols='30%,*' border='3'>
-      <frame name='feed' src='/raggle/feed' scrolling='yes' />
+      <frame name='feedFrame' src='/raggle/feed' scrolling='yes' />
       <frameset rows='60%,*' border='3'>
-        <frame name='item' src='/raggle/item' scrolling='auto' />
-        <frame name='desc' src='/raggle/desc' scrolling='auto' />
+        <frame name='itemFrame' src='/raggle/item' scrolling='auto' />
+        <frame name='descFrame' src='/raggle/desc' scrolling='auto' />
       </frameset>
     </frameset>
   </frameset>
