@@ -19,9 +19,9 @@
          href='http://www.raggle.org/'>Raggle</a>
     </div>
     <div id='titlebar-opts'>
-      <a target='feed'
+      <a target='feedFrame'
          href='/raggle/feed/?mode=import_opml'>Import</a> |
-      <a target='feed'
+      <a target='feedFrame'
          href='/raggle/feed/?mode=export_opml'>Export</a> |
       <a target='_new' href='http://www.raggle.org/docs/'>Help</a> |
       <a target='_top' href='/raggle/quit'>Quit</a>
